# faunu

./: .gitignore  Cargo.toml  README.md  deno.json  flake.nix
.cargo/: config.toml
nix/: default.nix  modules.nix  wasm.nix
src/: completion.rs  default_context.rs  error.rs  globals.rs  highlight.rs  lib.rs  memory_fs.rs
src/cmd/: cd.rs  eval.rs  fetch.rs  glob.rs  job.rs  job_kill.rs  job_list.rs  ls.rs  mkdir.rs  mod.rs  mv.rs  open.rs  print.rs  pwd.rs  random.rs  rm.rs  save.rs  source.rs  source_file.rs  sys.rs  version.rs
src/completion/: context.rs  files.rs  helpers.rs  mod.rs  suggestions.rs  types.rs  variables.rs
www/: index.html  package.json  vite.config.ts
www/src/: main.ts  style.css  worker.ts
