[package]
name = "faunu"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.104"
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.3", features = ["wasm_js"] }
web-sys = { version = "0.3", features = ["console", "Window"] }
vfs = { version = "0.12" }
nu-command = { git = "https://github.com/90-008/nushell", default-features = false }
nu-engine = { git = "https://github.com/90-008/nushell", default-features = false }
nu-parser = { git = "https://github.com/90-008/nushell", default-features = false }
nu-protocol = { git = "https://github.com/90-008/nushell", default-features = false }
nu-path = { git = "https://github.com/90-008/nushell", default-features = false }
nu-cmd-base = { git = "https://github.com/90-008/nushell", default-features = false }
nu-cmd-lang = { git = "https://github.com/90-008/nushell", default-features = false }
nu-cmd-extra = { git = "https://github.com/90-008/nushell", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
miette = { version = "7.6", features = ["fancy"] }
ansi_term = "0.12.1"

anyhow = "1"
jacquard = { git = "https://tangled.sh/ptr.pet/jacquard", default-features = false, features = ["api", "cache"] }
jacquard-repo = { git = "https://tangled.sh/ptr.pet/jacquard" }
url = "2"
futures = "0.3.31"
js-sys = "=0.3.81"
serde_ipld_dagcbor = "0.6.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
console_error_panic_hook = "0.1.7"

scc = "3"
rapidhash = { version = "4", features = ["unsafe"] }
async-lock = "3.4.1"
compile-time = "0.2.0"

[patch.crates-io]
vfs = { git = "https://github.com/landaire/rust-vfs", branch = "fix/wasm" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
debug-assertions = false
